--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Kotlin Dojo</string>
     <string name="com_spotify_sdk_redirect_scheme">yoyowallet</string>
     <string name="com_spotify_sdk_redirect_host">kotlindojo</string>
+    <string name="title_activity_new_releases">NewReleasesActivity</string>
 </resources>
